--- a/views/about.html
+++ b/views/about.html
@@ -20,7 +20,7 @@
 <body>
 	{{include './tpl/header.art'}}
 	<div class="byy-body fixed">
-		<div class="about-content" style="width:500px;margin:0px auto;text-align:left;padding-top:50px;">
+		<div class="about-content" style="">
 			<h1>关于</h1>
 			<ul>
 				<li>操千曲而后晓声，观千剑而后识器</li>
