--- a/public/article/detail.less
+++ b/public/article/detail.less
@@ -52,6 +52,7 @@ body{
 			    margin-right: 5px;
 			    background-color: #529bc5ee;
 			    color: white;
+			    white-space:nowrap;
 			}
 		}
 	}
