--- a/views/article/detail.html
+++ b/views/article/detail.html
@@ -42,7 +42,7 @@
 		{{/if}}
 		<hr>
 		<div class="shang">
-			<p>大侠,赏口饭吃吧~~</p>
+			<p>{{site.zan}}</p>
 			<div class="byy-btn" filter="shang">赞赏支持</div>
 			<div class="like" filter="addZan" data-id="{{article.id}}">
 				<div class="btn like-group">
