--- a/views/center/article/add.html
+++ b/views/center/article/add.html
@@ -86,7 +86,7 @@
 	</div>
 </body>
 </html>
-{{ include '../../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript" src="/plugins/marked/marked.min.js"></script>
 <script type="text/javascript" src="/plugins/highlight/highlight.pack.js"></script>
 <script type="text/javascript">
