--- a/views/center/category/list.html
+++ b/views/center/category/list.html
@@ -32,7 +32,7 @@
 	</div>
 </body>
 </html>
-{{ include '../../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript">
 	byy.require(['jquery'],function(){
 		byy.bindEvents({
