--- a/views/center/home.html
+++ b/views/center/home.html
@@ -18,6 +18,9 @@
 					<a data-href="/center/banner" href="javascript:;" filter="openMenu">Banner设置</a>
 				</li>
 				<li class="byy-nav-item" >
+					<a data-href="/center/links" href="javascript:;" filter="openMenu">友情链接</a>
+				</li>
+				<li class="byy-nav-item" >
 					<a data-href="/center/category" href="javascript:;" filter="openMenu">文章类别</a>
 				</li>
 				<li class="byy-nav-item" >
@@ -32,7 +35,7 @@
 	</div>
 </body>
 </html>
-{{ include '../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript">
 
 	byy.require(['jquery','win'],function(){
