--- a/views/center/article/list.html
+++ b/views/center/article/list.html
@@ -28,7 +28,7 @@
 	</div>
 </body>
 </html>
-{{ include '../../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript">
 	byy.require(['jquery','win','table'],function(){
 		var category = [];
@@ -121,7 +121,7 @@
 						})
 						return str;
 					}},
-					{field : 'tool',title:'操作',tool : true,templet : function( data ){
+					{field : 'tool',title:'操作',tool : true,width:250,templet : function( data ){
 						return ['<span class="byy-btn mini" data-id="'+data.id+'" filter="edit">去编辑</span>',
 								data.ispublish == '0' ? 
 								'<span class="byy-btn mini" data-id="'+data.id+'" filter="publish">发布</span>' : 
