--- a/views/center/banner/add.html
+++ b/views/center/banner/add.html
@@ -75,7 +75,7 @@
 	</div>
 </body>
 </html>
-{{ include '../../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript">
 	byy.require(['jquery','uploader','win'],function(){
 
