--- a/views/center/banner/list.html
+++ b/views/center/banner/list.html
@@ -46,7 +46,7 @@
 	
 </body>
 </html>
-{{ include '../../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript">
 	byy.require(['jquery','win','table'],function(){
 
