--- a/views/center/site/list.html
+++ b/views/center/site/list.html
@@ -48,6 +48,12 @@
 					</div>
 				</div>
 				<div class="byy-form-item">
+					<label for="" class="byy-label">赞赏语言</label>
+					<div class="byy-block" style="width:60%">
+						<input type="text" name="zan" value="{{site.zan}}">
+					</div>
+				</div>
+				<div class="byy-form-item">
 					<label for="" class="byy-label">站点ICON</label>
 					<div class="byy-block" style="width:60%">
 						<input type="hidden" name="faviconhref" value="{{site.faviconhref}}">
@@ -63,6 +69,14 @@
 						<span class="byy-btn small" id="uploadScan">上传ICON</span>
 					</div>
 				</div>
+				<div class="byy-form-item">
+					<label for="" class="byy-label">头像</label>
+					<div class="byy-block" style="width:60%">
+						<input type="hidden" name="avatar" value="{{site.avatar}}">
+						<img src="{{site.avatar}}" style="width:35px;height:35px;" />
+						<span class="byy-btn small" id="uploadAvatar">上传头像</span>
+					</div>
+				</div>
 				<div class="text-center" style="width:60%;">
 					<span class="byy-btn danger" filter="update" style="width:200px;">更新</span>
 				</div>
@@ -71,7 +85,7 @@
 	</div>
 </body>
 </html>
-{{ include '../../tpl/commonjs.art'}}
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript">
 	//由于是个人后台此处无校验。
 	byy.require(['jquery','uploader','win'],function(){
@@ -83,6 +97,7 @@
 			onSuccess : function(file,res){
 				var href = res.result.filePath;
 				$('[name="faviconhref"]').val(href);
+				$('[name="faviconhref"]').parent().find('img').attr('src',href);
 			}
 		});
 		byy.uploader().simpleImage({
@@ -91,6 +106,16 @@
 			onSuccess : function(file,res){
 				var href = res.result.filePath;
 				$('[name="sitescan"]').val(href);
+				$('[name="sitescan"]').parent().find('img').attr('src',href);
+			}
+		});
+		byy.uploader().simpleImage({
+			server : '/center/upload',
+			selector : '#uploadAvatar',
+			onSuccess : function(file,res){
+				var href = res.result.filePath;
+				$('[name="avatar"]').val(href);
+				$('[name="avatar"]').parent().find('img').attr('src',href);
 			}
 		});
 		//事件绑定
