--- a/views/center/article/add.html
+++ b/views/center/article/add.html
@@ -62,6 +62,10 @@
 				<div>
 					<span class="byy-btn warm small" filter="preview">预览</span>
 				</div>
+				<div>
+					<input type="text" id="urlshow" style="width:250px;height:30px;line-height:30px;">
+					<span class="byy-btn small" id="uploadPicture">上传照片复制路径</span>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -174,6 +178,13 @@
 			onSuccess : function(file,res){
 				$('.post-path img').attr('src',res.result.filePath);
 				$('[name="postpath"]').val(res.result.filePath);
+			}
+		});
+		byy.uploader().simpleImage({
+			server : '/center/upload',
+			selector : '#uploadPicture',
+			onSuccess : function(file,res){
+				$('#urlshow').val(res.result.filePath);
 			}
 		});
 
