--- a/public/article/article.less
+++ b/public/article/article.less
@@ -80,6 +80,7 @@
 			margin-left: 0!important
 		}
 	}
+	ol li{list-style:decimal;}
 	h1,h2,h3,h4,h5,h6{
 		margin: 0 0 15px;
 	    font-weight: 700;
