--- a/views/center/home.html
+++ b/views/center/home.html
@@ -26,6 +26,9 @@
 				<li class="byy-nav-item" >
 					<a data-href="/center/article" href="javascript:;" filter="openMenu">文章信息</a>
 				</li>
+				<li class="byy-nav-item" >
+					<a data-href="/center/comment" href="javascript:;" filter="openMenu">评论信息</a>
+				</li>
 			</ul>
 		</div>
 	</div>
