--- a/public/article/index.less
+++ b/public/article/index.less
@@ -44,7 +44,7 @@ html,body{
 #banner{
 	top:-2px;
 	.banner-item{
-		background-position: top center;
+		background-position: 0px 58px;
 		background-repeat: no-repeat;
 		background-attachment:fixed;
 	}
