--- a/views/article/detail.html
+++ b/views/article/detail.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>{{article.title}} | {{site.sitename}}</title>
 	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta http-equiv="Cache-Control" content="no-siteapp">
@@ -10,9 +9,10 @@
 	<meta name="applicable-device" content="pc,mobile">
 	<meta name="MobileOptimized" content="width">
 	<meta name="HandheldFriendly" content="true">
-	<meta name="keywords" content="{{article.tags.join(',')}}">
+	<meta name="mobile-agent" content="format=html5;url=https://chrunlee.cn/{{article.link}}">
 	<meta name="description" content="{{article.zhaiyao}}">
 	<meta name="author" content="{{site.sitename}}">
+	<title>{{article.title}} | {{site.sitename}}</title>
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
 	<link rel="stylesheet" href="/article/index.css">
 	<link rel="stylesheet" href="/article/article.css">
