--- a/views/article/detail.html
+++ b/views/article/detail.html
@@ -11,6 +11,7 @@
 	<meta name="HandheldFriendly" content="true">
 	<meta name="mobile-agent" content="format=html5;url=https://chrunlee.cn/{{article.link}}">
 	<meta name="description" content="{{article.zhaiyao}}">
+	<meta name="keywords" content="{{article.tags}}">
 	<meta name="author" content="{{site.sitename}}">
 	<title>{{article.title}} | {{site.sitename}}</title>
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
