--- a/views/demos/index.html
+++ b/views/demos/index.html
@@ -51,6 +51,15 @@
 	<div class="container-fluid">
 		<div class="block-wrap byy-clear">
 			<div class="demo-block trs">
+				<a class="demo-link byy-clear" href="/demos/canvas-board/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/canvas-board/post.png" alt=""></span>
+					<p class="demo-title byy-elip" title="canvas画板">canvas画板</p>
+					<p class="demo-des byy-elip" title="通过canvas实现的画板，可以绘制线条，可以擦除画布，进行截屏，设置颜色等。">
+						通过canvas实现的画板，可以绘制线条，可以擦除画布，进行截屏，设置颜色等。
+					</p>
+				</a>
+			</div>
+			<div class="demo-block trs">
 				<a class="demo-link byy-clear" href="/demos/js-360/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/js-360/post.png" alt=""></span>
 					<p class="demo-title byy-elip" title="3D展厅">3D展厅</p>
