--- a/views/article/detail.html
+++ b/views/article/detail.html
@@ -119,3 +119,4 @@
 {{ include '../tpl/commonjs.art'}}
 <script type="text/javascript" src="/plugins/highlight/highlight.pack.js"></script>
 <script type="text/javascript" src="/article/detail.js"></script>
+<script type="text/javascript" src="/article/canvas.js"></script>
