--- a/views/demos/index.html
+++ b/views/demos/index.html
@@ -51,6 +51,15 @@
 	<div class="container-fluid">
 		<div class="block-wrap byy-clear">
 			<div class="demo-block trs">
+				<a class="demo-link byy-clear" href="/demos/canvas-video/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/canvas-video/post.png" alt=""></span>
+					<p class="demo-title byy-elip" title="js调用本地摄像头">js调用本地摄像头</p>
+					<p class="demo-des byy-elip" title="通过JS 调用本地摄像头并通过canvas进行截图获取图像，当然也可以拿到图像后进行上传。">
+						通过JS 调用本地摄像头并通过canvas进行截图获取图像，当然也可以拿到图像后进行上传。
+					</p>
+				</a>
+			</div>
+			<div class="demo-block trs">
 				<a class="demo-link byy-clear" href="/demos/canvas-board/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/canvas-board/post.png" alt=""></span>
 					<p class="demo-title byy-elip" title="canvas画板">canvas画板</p>
