--- a/views/magnet/list.html
+++ b/views/magnet/list.html
@@ -87,5 +87,6 @@
 		</div>
 		{{/each}}
 	</div>
+	<p style="color:#ccc;font-size:12px;text-align:center;margin-top:100px;">*本站不保存任何文件，所有数据均从网络爬取，若侵权请联系站长.</p>
 </body>
 </html>
