--- a/public/article/detail.less
+++ b/public/article/detail.less
@@ -352,6 +352,36 @@ body{
 	width:100%;
 }
 
+/**返回顶部**/
+.backTop{
+	position:fixed;
+	width:50px;
+	height:50px;
+	right:-70px;
+	bottom:40px;
+	z-index:1200;
+	transition:all 1s ease;
+}
+.backTop.showme{
+	right:20px;
+	-moz-transform: scale(1) rotate(-360deg) translate(0px);
+    -webkit-transform: scale(1) rotate(-360deg) translate(0px);
+    -o-transform: scale(1) rotate(-360deg) translate(0px);
+	transform: scale(1) rotate(-360deg) translate(0px);
+}
+
+.backTop>div{
+	cursor:pointer;
+	width:100%;height:100%;
+	background-image:url(./img/top_button.png);
+	overflow:hidden;
+	background-position:0px 0px;
+}
+.backTop>div:hover{
+	background-position:0px 50px;
+}
+
+
 
 /**小屏看文章**/
 @media screen and (max-width:768px){
