--- a/views/center/article/list.html
+++ b/views/center/article/list.html
@@ -117,7 +117,8 @@
 				method : 'post',
 				url : '/center/article/list',
 				page : {
-					pageArray : [50,100]
+					limit : 100,
+					pageArray : [100]
 				},
 				cols : [[
 					{field : 'id',title : 'ID',sort : true,width : 100},
