--- a/public/article/article.less
+++ b/public/article/article.less
@@ -6,7 +6,7 @@
 	font-family: "Georgia,Times New Roman,Times,Songti SC,serif";
 	font-size: 16px;
     font-weight: 400;
-    line-height: 1.7;
+    line-height: 2;
 	h1{
 		font-size:26px;
 	}
@@ -122,8 +122,7 @@
 	}
 	pre{
 		margin-bottom: 20px;
-		padding: 15px;
-		font-size: 13px;
+		font-size: 14px;
 		word-wrap: normal;
 		word-break: break-word!important;
 		word-break: break-all;
@@ -173,7 +172,7 @@
 	.hljs {
 		display: block;
 		overflow-x: auto;
-		padding: .5em;
+		padding: 1em;
 		color: #abb2bf;
 		background: #282c34;
 	}
