--- a/public/css/index/index.less
+++ b/public/css/index/index.less
@@ -112,6 +112,13 @@ section{
 			float:left;
 			border-radius:5px;
 			box-sizing: border-box;
+			box-shadow: 0px 0px 41px 12px rgba(0,0,0,0.1);
+			-webkit-transition: all .3s ease;
+			-o-transition: all .3s ease;
+			transition: all .3s ease;
+			&:hover{
+				box-shadow: 0px 0px 41px 12px rgba(0,0,0,0.2);
+			}
 			.post{
 				width:100%;
 				height:150px;
@@ -120,6 +127,12 @@ section{
 				box-shadow:0px 0px 10px 1px rgba(0,0,0,0.3);
 				background-size:100%;
 				background-repeat:no-repeat;
+				-webkit-transition: all .3s ease;
+				-o-transition: all .3s ease;
+				transition: all .3s ease;
+			}
+			&:hover .post{
+				background-size:110%;
 			}
 			.article-title{
 				a{color:inherit;}
