--- a/public/css/article/detail.less
+++ b/public/css/article/detail.less
@@ -423,10 +423,10 @@ body{
     border: 1px solid #aaa;
     background-color:#f2f2f2;
     border-radius:5px;
-    top: 100px;
+    top: 130px;
     width: 200px;
     padding: 10px;
-    left: 20px;
+    left: 15px;
     -webkit-transition: width .3s ease;
     -o-transition: width .3s ease;
     transition: width .3s ease;
@@ -487,7 +487,14 @@ body{
 	.article-dir-seq-4{padding-left:60px;}
 }
 
-
+/**社会化分享**/
+.social-share{
+	position: absolute;
+	top:80px;
+	left:10px;
+}
+.social-share .icon-wechat .wechat-qrcode{top:45px!important;}
+.social-share .icon-wechat .wechat-qrcode:after{top:-15px!important;bottom:auto!important;border-color:transparent transparent #fff transparent!important;}
 /**小屏看文章**/
 @media screen and (max-width:768px){
 	html{overflow-x:hidden;}
