--- a/views/index/detail.html
+++ b/views/index/detail.html
@@ -18,6 +18,8 @@
 	<link rel="stylesheet" href="/css/index/index.css">
 	<link rel="stylesheet" href="/css/article/article.css">
 	<link rel="stylesheet" href="/css/article/detail.css">
+	<!-- 社会化分享-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css" >
 </head>
 <body class="grey-bg fixed">
 	<div style="width:0px;height:0px;overflow:hidden;line-height:0px;font-size:0px;"><img alt="{{article.title}}" src="{{article.postpath}}" width="0px" height="0px" /></div>
@@ -113,6 +115,7 @@
 		<img src="/weixin.jpg" alt="全靠各位土豪的打赏了.." style="width:200px;height:200px;margin-right:20px;">
 		<img src="/zhifubao.jpg" alt="全靠各位土豪的打赏了.." style="width:200px;height:200px;">
 	</div>
+	<div class="social-share" data-sites="weibo,qq,wechat,qzone"></div>
 	{{ include '../tpl/footer'}}
 </body>
 </html>
@@ -120,3 +123,4 @@
 <script type="text/javascript" src="/plugins/highlight/highlight.pack.js"></script>
 <script type="text/javascript" src="/js/article/detail.js"></script>
 <!-- <script type="text/javascript" src="/js/article/canvas.js"></script> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/js/social-share.min.js"></script>
