--- a/views/index/detail.html
+++ b/views/index/detail.html
@@ -13,6 +13,8 @@
 	<meta name="description" content="{{article.zhaiyao}}">
 	<meta name="keywords" content="{{article.tags}}">
 	<meta name="author" content="{{site.sitename}}">
+	<meta name="site" content="https://chrunlee.cn">
+	<meta name="title" content="{{article.title}} | {{site.sitename}}">
 	<title>{{article.title}} | {{site.sitename}}</title>
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
 	<link rel="stylesheet" href="/css/index/index.css">
