--- a/views/index/detail.html
+++ b/views/index/detail.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="/css/article/detail.css">
 	<!-- 社会化分享-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css" >
+	<link rel="stylesheet" href="/css/article/easy.css">
 </head>
 <body class="grey-bg fixed">
 	<div style="width:0px;height:0px;overflow:hidden;line-height:0px;font-size:0px;"><img alt="{{article.title}}" src="{{article.postpath}}" width="0px" height="0px" /></div>
