--- a/public/css/article/easy.less
+++ b/public/css/article/easy.less
@@ -141,6 +141,27 @@
 	}
 }
 
+.easy-game{
+	position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 100000;
+
+    &-start{
+    	position:absolute;
+    	width:100px;
+    	text-align:center;
+    	left:50%;
+    	margin-left:-50px;
+    	top:50%;
+    	margin-top:-15px;
+    }
+}
+
+
 @media screen and (max-width:768px){
 	.easy-music-title{
 		line-height:25px;
