--- a/views/demos/index.html
+++ b/views/demos/index.html
@@ -51,6 +51,15 @@
 	<div class="container-fluid">
 		<div class="block-wrap byy-clear">
 			<div class="demo-block trs">
+				<a class="demo-link byy-clear" href="/demos/daily-weight/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/daily-weight/post.jpg" alt=""></span>
+					<p class="demo-title byy-elip" title="我的体重呀">我的体重啊</p>
+					<p class="demo-des byy-elip" title="我的体重鸭">
+						什么时候，我的体重才能掉下来啊...惆怅！！！！！
+					</p>
+				</a>
+			</div>
+			<div class="demo-block trs">
 				<a class="demo-link byy-clear" href="/demos/canvas-video/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/canvas-video/post.png" alt=""></span>
 					<p class="demo-title byy-elip" title="js调用本地摄像头">js调用本地摄像头</p>
