--- a/public/css/index/index.less
+++ b/public/css/index/index.less
@@ -337,3 +337,75 @@ section.dark{
 		font-size:14px;
 	}
 }
+
+/**pdf 页面**/
+.pdf-content{
+	padding:0px!important;
+	margin:20px 200px;
+	min-height:300px;
+	.byy-form-item{
+		width:60%;
+	}
+	.byy-side{
+		top:0px;
+	}
+	.byy-body{
+		top:0px;
+		left:0px;
+		position:relative;
+		padding-left:200px;
+		padding-top:20px;
+		padding-bottom:20px;
+		border:1px solid #ddd;
+		background-color:white;
+	}
+	.pdf-block{
+		border:1px solid #25c2b7;
+		border-radius:5px;
+		position:relative;
+		height:150px;
+		margin-left:20px;
+		margin-right:20px;
+		margin-bottom:15px;
+		&:hover{
+			box-shadow:0px 0px 10px 0px #368c86;
+		}
+		.pdf-block-left{
+			width:150px;
+			height:150px;
+			position:absolute;
+			left:10px;
+			top:0px;
+			line-height:150px;
+			img{
+				max-width:100%;
+				max-height:100%;
+			}
+		}
+		.pdf-block-content{
+			padding-left:180px;
+
+			.pdf-block-title{
+				font-size:18px;
+				font-weight:bold;
+			}
+
+			.pdf-block-content{
+				height:100px;
+				overflow:hidden;
+				padding:5px 0px;
+				box-sizing:border-box;
+			}
+		}
+		.pdf-block-info{
+			color:#25c2b7;
+			font-size:14px;
+			span{
+				margin-right:20px;
+			}
+			i{
+				margin-right:5px;
+			}
+		}
+	}
+}
