--- a/views/index/pdf.html
+++ b/views/index/pdf.html
@@ -116,7 +116,7 @@
 								<span class="pull-right">
 									<span class="byy-btn mini" data-href="{{value.pdfpath}}" filter="preview">PDF预览</span>
 									{{if user}}
-									<span class="byy-btn mini" data-id="{{value.id}}" filter="edit">编辑</span>
+									<span class="byy-btn mini" data-id="{{value.id}}" filter="delete">删除</span>
 									{{/if}}
 								</span>
 							</p>
