--- a/views/index/pdf.html
+++ b/views/index/pdf.html
@@ -69,7 +69,7 @@
 							<div class="byy-block">
 								<span>
 									<select name="categoryid" class="byy-form-select" style="width:300px;" multiple="true">
-										{{each categoryList value i}}
+										{{each optionList value i}}
 										<option value="{{value.id}}">{{value.name}}</option>
 										{{/each}}
 									</select>	
