--- a/public/css/index/index.less
+++ b/public/css/index/index.less
@@ -415,3 +415,15 @@ section.dark{
 		margin:20px 50px;
 	}
 }
+@media screen and (max-width:768px){
+	.pdf-content{
+		margin:0px;
+		padding:0px;
+	}
+	.pdf-content .byy-body{
+		padding-left:0px;
+	}
+	.pdf-content .pdf-block .pdf-block-content .pdf-block-content{
+		height:70px;
+	}
+}
