--- a/public/css/index/index.less
+++ b/public/css/index/index.less
@@ -243,10 +243,24 @@ section.dark{
 
 /**关于**/
 .about-content{
-	width:500px;
+	width:800px;
 	margin:0px auto;
 	text-align:left;
 	padding-top:50px;
+	h1{
+		font-size:2em;
+		font-weight:400;
+		line-height:3em;
+	}
+}
+.about-content li{
+	font-size:1.4em;
+	color: rgb(85, 85, 85);
+	line-height:3em;
+	font-weight:400;
+}
+.about-content .info{
+	list-style:circle;	
 }
 
 /**自适应适配**/
@@ -337,7 +351,21 @@ section.dark{
 		font-size:14px;
 	}
 }
-
+/*关于link*/
+.about-link{
+	margin-bottom:10px;
+	width:50%;
+	float:left;
+	list-style:bengali;
+	img  {
+		width:50px;
+		height:50px;
+		margin-left:20px;
+		margin-right:20px;
+		border-radius:50%;
+		
+	}
+}
 /**pdf 页面**/
 .pdf-content{
 	padding:0px!important;
