--- a/views/index/about.html
+++ b/views/index/about.html
@@ -7,23 +7,26 @@
 	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
 	<link rel="stylesheet" href="/css/index/index.css">
 	<style>
-		h1{
-			font-size:2em;
-			font-weight:400;
-			line-height:3em;
-		}
-		.about-content li{list-style:circle;font-size:1.4em;color: rgb(85, 85, 85);line-height:3em;font-weight:400;}
+		
 	</style>
 </head>
 <body>
 	{{include '../tpl/header.art'}}
-	<div class="byy-body fixed">
+	<div class="byy-body">
 		<div class="about-content" style="">
 			<h1>关于</h1>
 			<ul>
-				<li>操千曲而后晓声，观千剑而后识器</li>
-				<li>QQ交流群:496275628</li>
-				<li><a href="https://github.com/chrunlee" target="_blank"><img style="width:1em;height:1em;margin-right:0.5em;" src="/images/github.png" />github : https://github.com/chrunlee</a></li>
+				<li class="info">操千曲而后晓声，观千剑而后识器</li>
+				<li class="info">QQ交流群:496275628</li>
+				<li class="info"><a href="https://github.com/chrunlee" target="_blank"><img style="width:1em;height:1em;margin-right:0.5em;" src="/images/github.png" />github : https://github.com/chrunlee</a></li>
+			</ul>
+		</div>
+		<div class="about-content">
+			<h1>朋友们</h1>
+			<ul>
+				{{each links value i}}
+				<li class="about-link"><a href="{{value.href}}" target="_blank"><img src="{{value.href}}/favicon.ico" />{{value.name}}</a></li>
+				{{/each}}
 			</ul>
 		</div>
 		{{include '../tpl/footer.art'}}
