--- a/public/css/index/index.less
+++ b/public/css/index/index.less
@@ -457,4 +457,12 @@ section.dark{
 	.pdf-content .pdf-block .pdf-block-content .pdf-block-content{
 		height:70px;
 	}
+	.pdf-block-info .author{display:none;}
+	.preview-btn{
+		height:50px!important;
+		width:150px!important;
+		line-height:50px!important;
+		position:relative;
+		top:10px;
+	}
 }
