--- a/views/index/pdf.html
+++ b/views/index/pdf.html
@@ -110,11 +110,11 @@
 								{{value.description}}
 							</p>
 							<p class="pdf-block-info">
-								<span><i class="byyicon icon-user"></i>{{value.author}}</span>
-								<span><i class="byyicon icon-attachment"></i>{{value.filesize}}</span>
-								<span><i class="byyicon icon-time"></i>{{value.createtime | dateformat 'yyyy-MM-dd' }}</span>
+								<span class="author"><i class="byyicon icon-user"></i>{{value.author}}</span>
+								<span class="author"><i class="byyicon icon-attachment"></i>{{value.filesize}}</span>
+								<span class="author"><i class="byyicon icon-time"></i>{{value.createtime | dateformat 'yyyy-MM-dd' }}</span>
 								<span class="pull-right">
-									<span class="byy-btn mini" data-href="{{value.pdfpath}}"><a href="/plugins/pdfjs/web/viewer.html?file={{value.pdfpath}}">PDF预览</a></span>
+									<span class="byy-btn mini preview-btn" data-href="{{value.pdfpath}}"><a href="/plugins/pdfjs/web/viewer.html?file={{value.pdfpath}}">PDF预览</a></span>
 									{{if user}}
 									<span class="byy-btn mini" data-id="{{value.id}}" filter="delete">删除</span>
 									{{/if}}
