--- a/views/index/about.html
+++ b/views/index/about.html
@@ -25,7 +25,7 @@
 			<h1>朋友们</h1>
 			<ul>
 				{{each links value i}}
-				<li class="about-link"><a href="{{value.href}}" target="_blank"><img src="{{value.href}}/favicon.ico" />{{value.name}}</a></li>
+				<li class="about-link"><a href="{{value.href}}" target="_blank"><img src="{{value.iconpath}}" />{{value.name}}</a></li>
 				{{/each}}
 			</ul>
 		</div>
