--- a/views/center/home.html
+++ b/views/center/home.html
@@ -29,6 +29,9 @@
 				<li class="byy-nav-item" >
 					<a data-href="/center/comment" href="javascript:;" filter="openMenu">评论信息</a>
 				</li>
+				<li class="byy-nav-item" >
+					<a data-href="/center/wish/list" href="javascript:;" filter="openMenu">心想事成</a>
+				</li>
 			</ul>
 		</div>
 	</div>
