--- a/public/css/article/detail.less
+++ b/public/css/article/detail.less
@@ -1,5 +1,8 @@
 /***文章详情页面样式**/
 @font:"Georgia,Times New Roman,Times,Songti SC,serif";
+::selection{
+	background-color:#de924c;
+}
 body{
 	overflow-x:hidden;
 }
