--- a/views/index/about.html
+++ b/views/index/about.html
@@ -19,6 +19,7 @@
 				<li class="info">操千曲而后晓声，观千剑而后识器</li>
 				<li class="info">QQ交流群:496275628</li>
 				<li class="info"><a href="https://github.com/chrunlee" target="_blank"><img style="width:1em;height:1em;margin-right:0.5em;" src="/images/github.png" />github : https://github.com/chrunlee</a></li>
+				<li class="info">友情链接请发我邮箱 chrunlee@foxmail.com</li>
 			</ul>
 		</div>
 		<div class="about-content">
