--- a/views/index/detail.html
+++ b/views/index/detail.html
@@ -111,6 +111,19 @@
 					</div>
 				</div>
 				{{ /each }}
+				<script type="text/javascript">
+				        (function() {
+				            var s = "_" + Math.random().toString(36).slice(2);
+				            document.write('<div style="" id="' + s + '"></div>');
+				            (window.slotbydup = window.slotbydup || []).push({
+				                id: "u4125857",
+				                container: s
+				            });
+				        })();
+				</script>
+				<!-- 多条广告如下脚本只需引入一次 -->
+				<script type="text/javascript" src="//cpro.baidustatic.com/cpro/ui/c.js" async="async" defer="defer" >
+				</script>
 			</div>
 		</div>
 	</div>
