wechat dat decode

--- a/views/demos/index.html
+++ b/views/demos/index.html
@@ -51,6 +51,15 @@
 	<div class="container-fluid">
 		<div class="block-wrap byy-clear">
 			<div class="demo-block trs">
+				<a class="demo-link byy-clear" href="/demos/wechat-dat/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/wechat-dat/post.jpg" alt=""></span>
+					<p class="demo-title byy-elip" title="微信dat文件在线解码">微信dat文件在线解码</p>
+					<p class="demo-des byy-elip" title="微信dat文件在线解码，wechat dat 图片文件在线解码。即时转化，即刻删除，不做存储。">
+						微信dat文件在线解码，wechat dat 图片文件在线解码。即时转化，即刻删除，不做存储。
+					</p>
+				</a>
+			</div>
+			<div class="demo-block trs">
 				<a class="demo-link byy-clear" href="/demos/daily-weight/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/daily-weight/post.jpg" alt=""></span>
 					<p class="demo-title byy-elip" title="我的体重呀">我的体重啊</p>
