--- a/views/other/magnet/list.html
+++ b/views/other/magnet/list.html
@@ -98,3 +98,4 @@
 	<p style="color:#ccc;font-size:12px;text-align:center;margin-top:100px;">*本站不保存任何文件，所有数据均从网络爬取，若侵权请联系站长屏蔽.</p>
 </body>
 </html>
+{{ include '../../tpl/commonjs.art'}}
