--- a/views/other/caipu/detail.html
+++ b/views/other/caipu/detail.html
@@ -25,6 +25,19 @@
 	<div class="share">
 		<img src="/images/icons/heart.png" alt="">长按关注,右上角分享哦!更多惊喜等着你~~<img src="/images/icons/heart.png" alt="">
 	</div>
+	<script type="text/javascript">
+	        (function() {
+	            var s = "_" + Math.random().toString(36).slice(2);
+	            document.write('<div style="" id="' + s + '"></div>');
+	            (window.slotbydup = window.slotbydup || []).push({
+	                id: "u4125857",
+	                container: s
+	            });
+	        })();
+	</script>
+	<!-- 多条广告如下脚本只需引入一次 -->
+	<script type="text/javascript" src="//cpro.baidustatic.com/cpro/ui/c.js" async="async" defer="defer" >
+	</script>
 	<div class="content">
 		<div class="title">—— 主材 ——</div>
 		<table>
