--- a/views/center/home.html
+++ b/views/center/home.html
@@ -32,6 +32,9 @@
 				<li class="byy-nav-item" >
 					<a data-href="/center/wish/list" href="javascript:;" filter="openMenu">心想事成</a>
 				</li>
+				<li class="byy-nav-item" >
+					<a data-href="/center/album/list" href="javascript:;" filter="openMenu">我的相册</a>
+				</li>
 			</ul>
 		</div>
 	</div>
