--- a/views/center/home.html
+++ b/views/center/home.html
@@ -35,6 +35,14 @@
 				<li class="byy-nav-item" >
 					<a data-href="/center/album/list" href="javascript:;" filter="openMenu">我的相册</a>
 				</li>
+				<li class="byy-nav-item">
+					<a href="javascript:;">商店管理</a>
+					<ul class="byy-nav-child">
+						<li><a href="javascript:;" data-href="/center/shop/list" filter="openMenu">商品管理</a></li>
+						<li><a href="javascript:;" data-href="/center/shop/order" filter="openMenu">支付订单</a></li>
+						<li><a href="javascript:;" data-href="/center/shop/suceess" filter="openMenu">购买记录</a></li>
+					</ul>
+				</li>
 			</ul>
 		</div>
 	</div>
