--- a/views/center/home.html
+++ b/views/center/home.html
@@ -40,7 +40,7 @@
 					<ul class="byy-nav-child">
 						<li><a href="javascript:;" data-href="/center/shop/list" filter="openMenu">商品管理</a></li>
 						<li><a href="javascript:;" data-href="/center/shop/order" filter="openMenu">支付订单</a></li>
-						<li><a href="javascript:;" data-href="/center/shop/suceess" filter="openMenu">购买记录</a></li>
+						<li><a href="javascript:;" data-href="/center/shop/success" filter="openMenu">购买记录</a></li>
 					</ul>
 				</li>
 			</ul>
