--- a/views/error/404.html
+++ b/views/error/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>404 Page not found | {{site.sitename}}</title>
+	<title>404 Page not found | BUG集散地</title>
 	<style>
 		html,body{
 			width:100%;height:100%;margin:0px;
@@ -30,7 +30,7 @@
 </head>
 <body>
 	<div class="head">
-		<a href="/" style="color:inherit;text-decoration:none;"><img src="/favicon.ico" alt=""> {{site.sitename}}</a>
+		<a href="/" style="color:inherit;text-decoration:none;"><img src="/favicon.ico" alt=""> BUG 集散地</a>
 	</div>
 	<div class="content">
 		<div class="left-content">
