--- a/views/center/shop/add.html
+++ b/views/center/shop/add.html
@@ -71,7 +71,7 @@
                 
             </div>
             <div class="editor-content">
-                <textarea name="description" id="description">{{article.content}}</textarea>
+                <textarea name="description" id="description">{{article.description}}</textarea>
             </div>
         </div>
         <!--右侧文章预览区域-->
