--- a/views/shop/detail.html
+++ b/views/shop/detail.html
@@ -67,6 +67,20 @@
                     <div class="byy-tab-item show">{{@item.html}}</div>
                 </div>
             </div>
+
+            <!-- 腾讯云广告-->
+            <div class="ads text-center" style="height:100px;margin-top:200px;">
+                <div class="byy-carousel" id="test2" byy-indicator="none" byy-arrow="none">
+                    <div carousel-item="">
+                        <div>
+                            <a href="https://cloud.tencent.com/act/cps/redirect?redirect=1040&cps_key=af606d241f7edd6d75091bd30e89aebd&from=console" target="_blank"><img src="/ads/tengxunyun1.jpg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href="https://cloud.tencent.com/act/cps/redirect?redirect=1044&cps_key=af606d241f7edd6d75091bd30e89aebd&from=console" target="_blank"><img src="/ads/tengxunyun2.jpg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
@@ -77,6 +91,14 @@
         
         byy.slider.render({
             elem : '#test',
+            arrow : 'none',
+            indicator : 'none',
+            width:'100%',
+            height : '100%'
+
+        });
+        byy.slider.render({
+            elem : '#test2',
             arrow : 'none',
             indicator : 'none',
             width:'100%',
